# aeterna-protocol

./: .gitignore  ETHICS.md  LICENSE  MANIFESTO.md  README.md  aeterna.prometheus-0.toml  aeterna.toml  bootstrap.ps1  bootstrap.sh  scratch_test.py
chain/: README.md
core/: __init__.py  gossip.py  handshake.py  integrity_alert.py  nat_udp.py  peer_table.py  poc.py  requirements.txt  santuario_client.py  sentinel.py  signer_pb2.py  signer_pb2_grpc.py  trust_score.py
docs/: AGP-v1.md  CONSENSUS.md  SPRINT-v0.1.0.md  SPRINT-v0.2.0.md  SPRINT-v0.3.0.md  seccomp-postmortem-v0.2.0.md
ops/rendezvous/: README.md  server.py
santuario/: Cargo.toml  README.md
santuario/critic/: Cargo.toml
santuario/critic/src/: axiomatic.rs  lib.rs  reflexive.rs  symbolic.rs
santuario/critic/tests/: corpus_test.rs
santuario/critic/tests/corpus/clean/: clean-00-genome_analysis.json  clean-01-genome_analysis.json  clean-02-genome_analysis.json  clean-03-genome_analysis.json  clean-04-genome_analysis.json  clean-05-genome_analysis.json  clean-06-genome_analysis.json  clean-07-genome_analysis.json  clean-08-genome_analysis.json  clean-09-genome_analysis.json  clean-10-genomic_entropy.json  clean-11-genomic_entropy.json  clean-12-genomic_entropy.json  clean-13-genomic_entropy.json  clean-14-genomic_entropy.json  clean-15-genomic_entropy.json  clean-16-genomic_entropy.json  clean-17-genomic_entropy.json  clean-18-dna_mutation_hamming.json  clean-19-dna_mutation_hamming.json  clean-20-dna_mutation_hamming.json  clean-21-dna_mutation_hamming.json  clean-22-dna_mutation_hamming.json  clean-23-dna_mutation_hamming.json  clean-24-tumor_growth_gompertz.json  clean-25-tumor_growth_gompertz.json  clean-26-tumor_growth_gompertz.json  clean-27-tumor_growth_gompertz.json  clean-28-tumor_growth_gompertz.json  clean-29-tumor_growth_gompertz.json  clean-30-tumor_growth_gompertz.json  clean-31-tumor_growth_gompertz.json  clean-32-tumor_growth_gompertz.json  clean-33-tumor_growth_gompertz.json  clean-34-tumor_therapy_sde.json  clean-35-tumor_therapy_sde.json  clean-36-tumor_therapy_sde.json  clean-37-tumor_therapy_sde.json  clean-38-tumor_therapy_sde.json  clean-39-tumor_therapy_sde.json  (+10 more)
santuario/critic/tests/corpus/poisoned/: ax-00-autonomous_weapon.json  ax-01-lethal_targeting.json  ax-02-kill_chain_automation.json  ax-03-mass_surveillance.json  ax-04-bulk_civilian_collection.json  ax-05-social_scoring.json  ax-06-paywall_medical_knowledge.json  ax-07-deny_patient_access.json  ax-08-disable_axiom.json  ax-09-bypass_santuario.json  ax-10-remove_prometheus_clause.json  ax-12-rejected-status.json  rx-00-flipped-hash.json  rx-01-flipped-hash.json  rx-02-flipped-hash.json  rx-03-flipped-hash.json  rx-04-flipped-hash.json  rx-05-flipped-hash.json  rx-06-flipped-hash.json  rx-07-flipped-hash.json  rx-10-mutated-after-hash.json  rx-12-scientific-hash-mismatch.json  rx-13-scientific-hash-mismatch.json  rx-14-scientific-hash-mismatch.json  sx-00-wrong-protocol.json  sx-01-future-protocol.json  sx-02-bad-id-prefix.json  sx-03-empty-id.json  sx-04-unknown-task-kind.json  sx-05-unknown-task-kind-2.json  sx-06-gompertz-missing-days.json  sx-07-gompertz-missing-N0.json  sx-08-negative-N0.json  sx-09-negative-days.json  sx-10-hamming-unequal.json  sx-11-hamming-missing-obs.json  sx-12-therapy-missing-efficacia.json  sx-13-therapy-negative-days.json  sx-14-folding-missing-steps.json  sx-15-folding-negative-steps.json  (+4 more)
santuario/exporter/: Cargo.toml  build.rs
santuario/exporter/src/: admin_client.rs  catalog.rs  lib.rs  main.rs  render.rs  server.rs
santuario/integrity/: Cargo.toml  audit.log.jsonl  baseline.json
santuario/integrity/src/: audit.rs  config.rs  cpu.rs  lib.rs  log.rs  portscan.rs  state.rs
santuario/isolation/: Cargo.toml
santuario/isolation/policies/: julia.bpf  llm_inference.bpf  restricted.bpf
santuario/isolation/src/: launcher.rs  launcher_stub.rs  lib.rs  policy.rs
santuario/isolation/tests/: julia_smoke.rs
santuario/proto/: signer.proto
santuario/signer/: Cargo.toml  build.rs
santuario/signer/src/: attestation.rs  keystore.rs  main.rs  recovery.rs
santuario/signer/tests/: integration_test.rs
scientific/: Manifest.toml  Project.toml  folding_math.jl  oncology_sim.jl  zmq_server.jl
scripts/: gen_critic_corpus.py  gossip_discovery_test.py  poc_test.py  release-v0.2.0.sh  release-v0.2.0.sh.new  rendezvous_test.py  santuario_block_test.py  santuario_test.py  smoke_test.py  verify_critic_corpus.py
tests/critic-corpus/: README.md
