[package]
name        = "santuario-signer"
description = "Dilithium-5 signing service. Refuses to sign unless vault is unsealed, workload is attested, and the critic accepts the payload."
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
# Workspace crates
santuario-vault     = { path = "../vault" }
santuario-critic    = { path = "../critic" }
santuario-integrity = { path = "../integrity" }
santuario-isolation = { path = "../isolation" }

# gRPC / async
tonic        = { workspace = true }
prost        = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { workspace = true }

# Crypto
pqcrypto-dilithium = { workspace = true }
pqcrypto-traits    = { workspace = true }
sha2               = { workspace = true }
hex                = { workspace = true }
rand               = { workspace = true }

# Serde / errors / logging
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
log         = { workspace = true }
env_logger  = { workspace = true }
dirs        = { workspace = true }
chrono      = { workspace = true }
clap        = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[build-dependencies]
tonic-build         = "0.10"
protoc-bin-vendored = "3"

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
# Enable the PID-attestation enforcement. Off by default for dev; the
# production bootstrap.sh flips it on.
strict-attestation = []

[[bin]]
name = "santuario-signer"
path = "src/main.rs"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[[bin]]
name = "santuarioctl"
path = "src/bin/santuarioctl.rs"
